# wallpapers

./: .travis.yml  CONTRIBUTING.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  README.md~  elementary-wallpapers.xml  elementary-wallpapers.xml.in  elementaryos-default  exif.cfg  meson.build  meson_options.txt  setup.cfg  setup.py  tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  release.yml
backgrounds/: Ashim DSilva.xml  Snow-Capped Mountain.xml  Sunset by the Pier.xml  Viktor Forgacs.xml  elementaryos-default
data/: meson.build  wallpapers.appdata.xml.in  wallpapers.metainfo.xml.in
debian/: changelog  control  copyright  elementary-wallpapers-extra.install  install  rules  wallpapers2gconf.xsl
loki/: copyright  photo-1441943250180-ea34e997ffad.license
luna/: elementaryos-default
luna/debian/: changelog  control  copyright  rules
meson/: symlink.py
po/: LINGUAS  POTFILES  POTFILES.in  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  (+173 more)
src/: Application.vala  meson.build
